--- a/css/style.less
+++ b/css/style.less
@@ -82,6 +82,7 @@ h1 {
 .col-md-8 {
     height: 741px;
     background-color:"#ffffff";
+//    margin-top: 200px;
     
     h1 {
         margin-top: 162px;
@@ -179,17 +180,368 @@ h1 {
 }
 
     .whois {
+            height: 753px;
             text-align: center;
             color: #fff;
-        text-transform: uppercase;
-            background-color: #343131;    
+            text-transform: uppercase;
+            background-color: #343131;  
+            position: relative;
+        h3{
+            margin-top: 109px;
+        }
+        .line {
+        width: 60px;
+        height: 60px;
+        border-bottom: 3px solid #29cadf;
+        margin: 0px auto;
+    }
         .col-md-4 {
             .blocks {
+                margin-top: 60px;
                 background-color:#cccccc;
                 height: 415px;
             }
-            
+            .blocks-center {
+                margin-top: 60px;
+                background-color:#525252;
+                height: 415px;
+               
+            }            
+        }
+    }
+.event {
+    height: 347px;
+    background-color: #f8f8f8;
+     h2 {
+         margin-top: 119px;
+         text-align: center;
+    }
+    .line {
+        width: 60px;
+        height: 60px;
+        border-bottom: 3px solid #29cadf;
+        margin: 0px auto;
+    }
+    .days {
+        margin-top: 50px;
+        text-align: center;
+        font-size: 14px;
+        text-transform: uppercase;
+        
+        li {
+            width: 99px;
+            height: 39px;    
+            list-style-type: none;
+            display: inline;
+            border: 1px solid #eaeaea; 
+           
         }
         
     }
+}
+.day1 {
+    background-color: #f8f8f8;
+    
+    .col-md-5 {
+        height: 490px;
+        margin-top: 80px;
+        background-color: #fff;
+        position: relative;
+        img {
+            position: absolute;
+            left: 15px;
+            top: 15px;
+            z-index: 2;
+        }
+        .col-md-12 {
+//            width: 460px;
+            height: 307px;
+            background-color: #cccccc;
+            margin: 15px 0;
+        }
+    }
+    .col-md-2 {
+        margin-top: 80px;
+        height: 490px;
+//        background-color: red;
+        .around {
+            width: 100px !important;
+            height: 100px;
+            border: 3px solid #cccccc;
+            background-color: #cccccc;
+            display: flex;
+            border-radius: 50%;
+//            float: left;
+            margin: 90px auto 0px;
+            p {
+                font-size: 14px;
+        color: #fff;
+        margin: auto;
+            }
+        }
+        
+    }
+    
+    
+}
+.day2 {
+    background-color: #f8f8f8;
+       
+    .col-md-5 {
+        height: 490px;
+        margin-top: -10px;
+        background-color: #fff;
+        position: relative;
+        img {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            z-index: 2;
+        }
+        .col-md-12 {
+//            width: 460px;
+            height: 307px;
+            background-color: #cccccc;
+            margin: 15px 0;
+        }
+    }
+    .col-md-2 {
+        margin-top: -10px;
+        height: 490px;
+//        background-color: red;
+        .around {
+            width: 100px !important;
+            height: 100px;
+            border: 3px solid #cccccc;
+            background-color: #cccccc;
+            display: flex;
+            border-radius: 50%;
+//            float: left;
+            margin: 90px auto 0px;
+            p {
+                font-size: 14px;
+        color: #fff;
+        margin: auto;
+            }
+        }
+        
+    }
+    
+    
+}
+.day3 {
+    background-color: #f8f8f8;
+    .col-md-12 {
+        margin: 0 auto;
+        
+        text-align: center;
+    }
+    button {
+        font-size: 16px;
+        text-transform: uppercase;
+        color: #fff;
+        width: 171px;
+        height: 43px;
+        background-color: #343131;
+        
+    }
+    
+    .col-md-5 {
+        height: 490px;
+        margin-top: -10px;
+        background-color: #fff;
+        position: relative;
+        img {
+            position: absolute;
+            left: 15px;
+            top: 15px;
+            z-index: 2;
+        }
+        .col-md-12 {
+//            width: 460px;
+            height: 307px;
+            background-color: #cccccc;
+            margin: 15px 0;
+        }
+    }
+    .col-md-2 {
+        margin-top: -10px;
+        height: 490px;
+//        background-color: red;
+        .around {
+            width: 100px !important;
+            height: 100px;
+            border: 3px solid #cccccc;
+            background-color: #cccccc;
+            display: flex;
+            border-radius: 50%;
+//            float: left;
+            margin: 90px auto 0px;
+            p {
+                font-size: 14px;
+        color: #fff;
+        margin: auto;
+            }
+        }
+        
+    }
+    
+    
+}
+.hurry {
+    width: 100%;
+        height: 150px;
+        background-color: #cccccc;
+        margin-top: 120px;
+    p {
+            font-size: 20px;
+            padding-top: 70px;
+            text-transform: uppercase;
+        }
+    .col-md-2 {
+        
+         button{    
+            font-size: 13px;
+            text-transform: uppercase;
+            width: 150px;
+            height: 43px;
+            background-color:#29cadf;
+            margin-top: 70px; 
+            
+        }
+        
+        
+    }
+   
 
+}
+
+.blogs {
+            height: 753px;
+            text-align: center;
+            color: #000; 
+            text-transform: uppercase;
+            background-color: #fff;  
+            position: relative;
+    p{
+        color: #a0a0a0;
+        font-size: 12px;
+        text-align: left;
+    }
+        h3{
+            margin-top: 109px;
+        }
+        .line {
+        width: 60px;
+        height: 60px;
+        border-bottom: 3px solid #29cadf;
+        margin: 25px auto;
+    }
+    .blocks {
+                margin-top: 55px;
+                background-color:#cccccc;
+                height: 230px;
+            }
+             
+}
+.container{
+    .form-left {
+        height: 762px;
+        background-color: #ccc;
+    }
+    .form-right {
+        height: 762px;
+        background-color: #f8f8f8;
+        position: relative;
+        h3 {
+            font-size: 30px;
+            color:#000000;
+            text-transform: uppercase;
+            margin-top: 120px;
+            
+        }
+        .line {
+        width: 60px;
+        height: 3px;
+        border-bottom: 3px solid #29cadf;
+        margin: 30px 0;
+    }
+        li {
+//            width: 270px;
+//            height: 40px;    
+            list-style-type: none;
+            display: inline;
+            border: 1px solid #eaeaea; 
+            margin-right: 15px;
+            input {
+            width: 270px;
+            height: 40px; 
+            
+        }
+           
+        }
+        input {
+            width: 570px;
+            height: 40px;
+            margin: 25px auto 0;
+            
+        }
+        .message {
+            width: 570px;
+            height: 160px;
+        }
+        .send {
+            width: 160px;
+            height: 45px;
+            background-color: #29cadf;
+            margin-top: 25px;
+        }
+        
+    }
+}
+
+.map {
+    height: 500px;
+    width: 100%;
+}
+.footer1 {
+    height: 406px;
+    background-color:#333333;
+    h6 {
+        font-size: 16px;
+        color: #fff;
+        text-transform: uppercase;
+        margin-top: 100px;
+    }
+    p {
+        font-size: 14px; 
+        color:#a6a6a6;
+    }
+//     .email {
+//    width: 226px; 
+//    height: 40px; 
+//   }
+//    .submit {
+//        color: #29cadf;
+//        width: 45px;
+//        height: 40px;
+       
+        
+//    }
+    li {
+        list-style-type: none;
+        display: inline;
+                
+        }
+}
+
+.footer {
+    background-color: #262626;
+    height: 55px;
+     li {
+        list-style-type: none;
+        display: inline;
+         text-align: right;
+         margin-right: 15px;
+}
+}
